# snametize

./: .gitignore  .travis.yml  CMakeLists.txt  LICENSE  Makefile  README.md  snametize.cpp  snametize.hpp
lib/gtest-1.7.0/: Makefile  config.status  libtool
src/: main.cc  snametize.cc  snametize.h
src/graph/: EdgeListGraph.cc  EdgeListGraph.h  edge.h  graph.cc  graph.h  vertex.h
src/reader/: SnapReader.cc  SnapReader.h  reader.cc  reader.h
src/util/: util.cc  util.h
src/writer/: GmlWriter.cc  GmlWriter.h  MetisWriter.cc  MetisWriter.h  SnapWriter.cc  SnapWriter.h  writer.cc  writer.h
test/: EdgeListGraph_test.cc  small_webgraph.gml  small_webgraph.metis  small_webgraph.snap  small_webgraph.txt  snametize_test.cc  webgraph.metis
