cmake_minimum_required(VERSION 2.8)
project (snametize CXX)
set (snametize_VERSION_MAJOR 0)
set (snametize VERSION_MINOR 1)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
find_package( Boost REQUIRED COMPONENTS program_options)
include_directories( ${Boost_INCLUDE_DIRS} )
add_executable(snametize src/snametize.cc)
target_link_libraries( snametize ${Boost_PROGRAM_OPTIONS_LIBRARY} )
